--- a/index.html
+++ b/index.html
@@ -1,18 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
   <title>Instagram</title>
 </head>
+
 <body>
-  Instagram
+  <div class="container">
+    <main class="main">
+      <div class="phone">
+        <img src="img/phones.png" alt="phones" class="phone__image">
+      </div>
+      <div class="intro">
+        <div class="intro__banner">
+          <div class="intro__title">
+            <img src="img/brand.png" alt="Instagram brand" class="intro__brand">
+          </div>
+          <div class="intro__login">
+            <a class="btn" href="#">
+              <img src="img/home.png" alt="Home">
+              <span>Log in</span>
+            </a>
+          </div>
+        </div>
+        <div class="intro__description">
+          <h2>Capture and Share<br>the World's Moments</h2>
+          <div class="description__paragraph">
+            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash;
+              it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+              world.</p>
+            <p>Oh yeah, did we mention it's free?</p>
+          </div>
+          <div class="intro__store">
+            <a href="#"><img src="img/badge-iphone.png" alt="AppStore"></a>
+            <a href="#"><img src="img/badge-android.png" alt="Google Play Store"></a>
+          </div>
+        </div>
+      </div>
+    </main>
+    <footer class="footer">
+      <nav>
+        <ul>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <span class="copyright">&copy; 2014 Instagram</span>
+        </ul>
+      </nav>
+    </footer>
+  </div>
+  <!-- Instagram
 
   Capture and Share the World's Moments
 
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that
+  easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
 
@@ -28,6 +81,7 @@
   Privacy
   Terms
 
-  &copy; 2014 Instagram
+  &copy; 2014 Instagram -->
 </body>
+
 </html>
